# CHIP8-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: chip8_engine.hpp  chip8_engine_fwd.hpp
src/: chip8_engine.cpp  main.cpp
tests/: chip8_engine_test.cpp
tests/test_data/: IBM_Logo.txt  test_opcode.txt
